--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html>
 <head>
 </head>
 <body>
 <h1>Mohamed</h1>
+nonnononon
 </body>
 </html>
-=======
->>>>>>> parent of 0b3e43f... basic html structure
+
+
